--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,7 @@
 	url = https://github.com/lcpz/awesome-freedesktop.git
 	branch = master
 
+[submodule "lain"]
+	path = lain
+	url = https://github.com/lcpz/lain.git
+	branch = master
